[project]
name = "hantoo-mcp"
version = "0.1.0"
description = "한국투자증권 마스터파일 관리 및 종목 검색 Remote MCP 서버"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
